[package]
name = "test-tg-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
teloxide = { version = "0.12", features = ["macros"] }
tokio = { version = "1.0", features = ["full"] }
reqwest = "0.12.4"
dotenv = "0.15"
actix-cors = "0.7.0"
actix-web = "4.5.1"
ethers = { version = "2.0", features = ["legacy"] }
signature = "2.2.0"
serde = { version = "1.0.218", features = ["derive"] }
anyhow = "1.0.83"
serde_json = "1.0.140"